// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for "arrow-head-right" 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 3`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 4`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: not-allowed;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 5`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: not-allowed;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 6`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: not-allowed;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  background-color: var(--p-color-frosted);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 7`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: underline;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 8`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: space-between;
  align-items: center;
  font-size: var(--p-typescale-xl);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  background-color: var(--p-color-frosted);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: -1;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 9`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: space-between;
  align-items: center;
  font-size: var(--p-typescale-xl);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  background-color: var(--p-color-frosted);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: -1;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 10`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--p-radius-full);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 11`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--p-radius-full);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 12`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--p-radius-full);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    gap: var(--p-spacing-static-xs);
  }
  .root::before {
    right: -4px;
    left: -4px;
    border-radius: var(--p-radius-lg);
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
  }
}

@media(min-width:760px) {
  .root {
    gap: 0;
  }
  .root::before {
    right: -2px;
    left: -2px;
    border-radius: var(--p-radius-full);
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
  }
}

@media(min-width:1000px) {
  .root {
    gap: var(--p-spacing-static-xs);
  }
  .root::before {
    right: -4px;
    left: -4px;
    border-radius: var(--p-radius-lg);
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
  }
}

@media(min-width:1300px) {
  .root {
    gap: 0;
  }
  .root::before {
    right: -2px;
    left: -2px;
    border-radius: var(--p-radius-full);
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
  }
}

@media(min-width:1760px) {
  .root {
    gap: var(--p-spacing-static-xs);
  }
  .root::before {
    right: -4px;
    left: -4px;
    border-radius: var(--p-radius-lg);
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
  }
}

@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "arrow-head-right" 13`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(min-width:480px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:760px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1000px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:1300px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1760px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-contrast-low);
  text-decoration: underline;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: 0;
  justify-content: space-between;
  align-items: center;
  font-size: var(--p-typescale-xs);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--p-radius-full);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: -1;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    gap: var(--p-spacing-static-xs);
    justify-content: flex-start;
    align-items: flex-start;
    font-size: var(--p-typescale-sm);
  }
  .root::before {
    right: -4px;
    left: -4px;
    border-radius: var(--p-radius-lg);
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
    order: 0;
  }
}

@media(min-width:760px) {
  .root {
    gap: 0;
    justify-content: space-between;
    align-items: center;
    font-size: var(--p-typescale-md);
  }
  .root::before {
    right: -2px;
    left: -2px;
    border-radius: var(--p-radius-full);
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
    order: -1;
  }
}

@media(min-width:1000px) {
  .root {
    gap: var(--p-spacing-static-xs);
    justify-content: flex-start;
    align-items: flex-start;
    font-size: var(--p-typescale-lg);
  }
  .root::before {
    right: -4px;
    left: -4px;
    border-radius: var(--p-radius-lg);
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
    order: 0;
  }
}

@media(min-width:1300px) {
  .root {
    gap: 0;
    justify-content: space-between;
    align-items: center;
    font-size: var(--p-typescale-xl);
  }
  .root::before {
    right: -2px;
    left: -2px;
    border-radius: var(--p-radius-full);
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
    order: -1;
  }
}

@media(min-width:1760px) {
  .root {
    gap: var(--p-spacing-static-xs);
    justify-content: flex-start;
    align-items: flex-start;
    font-size: inherit;
  }
  .root::before {
    right: -4px;
    left: -4px;
    border-radius: var(--p-radius-lg);
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
    order: 0;
  }
}

@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "none" 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: not-allowed;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: relative;
  opacity: 0;
}
.icon {
  position: absolute;
  top: 0;
  left: calc(50% - var(--p-leading-normal) / 2);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "none" 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-sm);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: relative;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "none" 3`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: inherit;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: relative;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for "none" 4`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-contrast-low);
  text-decoration: none;
  font: var(--p-font-weight-normal) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  gap: var(--p-spacing-static-xs);
  justify-content: flex-start;
  align-items: flex-start;
  font-size: var(--p-typescale-xs);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--p-radius-lg);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: relative;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    font-size: var(--p-typescale-sm);
  }
}

@media(min-width:760px) {
  .root {
    font-size: var(--p-typescale-md);
  }
}

@media(min-width:1000px) {
  .root {
    font-size: var(--p-typescale-lg);
  }
}

@media(min-width:1300px) {
  .root {
    font-size: var(--p-typescale-xl);
  }
}

@media(min-width:1760px) {
  .root {
    font-size: inherit;
  }
}

@media(forced-colors:active) {
  .root {
    color: LinkText;
  }
  .root:is(button) {
    color: ButtonText;
  }
  .root:focus-visible::before {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: var(--p-blur-frosted);
    backdrop-filter: var(--p-blur-frosted);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;
